# workstation

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  Dockerfile.base  Dockerfile.boot  Dockerfile.build  Dockerfile.ci  Dockerfile.dev  Dockerfile.devel  Dockerfile.develop  Dockerfile.rust  Dockerfile.workstation  Dockerfile.zephyr  Makefile  README.md  VERSION  build  build-docker-image  build-main-image  develop  docker-bake.hcl  entrypoint.sh  publish  requirements-ci.txt  requirements-doc.txt  requirements.txt  start
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  develop.yml
cmake/: FindSphinx.cmake
conf/: .bashrc  .tigrc  .tmux.conf  bashrc
conf/doom/: adoc-mode.el  checkpatch-mode.el  config.el  custom.el  gtts.el  init.el  markup-faces.el  org-dashboard.el  org-numbers.el  packages.el  plantuml-mode.el  refactor.el  robot-mode.el  top-comment.el  unit-test.el  yaml-mode.el
conf/i3/: config
conf/nvim/: init.vim  typescript.vim
conf/tmuxinator/: demo.yml  platform.yml
conf/virsh/: network.xml  ubuntu.xml
doc/: CMakeLists.txt  conf.py  index.rst
scripts/: boost-cpu  bootstrap  build  build-develop  common.sh  develop  powersave-cpu  profile-system  publish  start-vm
scripts/bootstrap/: all  base  boot-vm  cursor  docker  gdb  i3  node  nvim  sdk  security  tmux  vm
scripts/cleanup/: logs
scripts/security/: audit  lock
